# src/models/workspace.model.js
@@ -15,10 +15,6 @@ const workspaceSchema = new mongoose.Schema(
             type: mongoose.Schema.Types.ObjectId,
             ref: "User",
             required: true
-        },
-        isActive: {
-            type: Boolean,
-            default: true
         }
     },
     {
